syntax = "proto3";
package Msg;
option  go_package="ProtoEngine/src/message";


  enum ServerMsg_ID
  {
    Msg_Error=0;
    //longin消息10000到20000都是登录验证等和account相关消息
    Msg_LoginRequest            =10001;//http登陆请求
    Msg_LoginResponse           =10002;//http登陆返回
    Msg_LoginRegist             =10003;//http注册请求

    Msg_LoginCheckToken         =10004;//验证token登陆
    Msg_LoginCheckTokenResult   =10005;//验证token结果 包括账号角色的推送结果
    //20000到30000 聊天服务相关
    Msg_ChatRequest             =20001;//发送聊天
    Msg_ChatResponse            =20002;//聊天请求
    //
  }

enum EMsg_Error
{
  Non                  =0;
  Unknown              =20000;//未知错误
  DBClosed             =20001;//数据库错误
  UserInfo             =20002;//账号信息错误
  CheckTokenFail       =20003;//验证token错误
}