syntax = "proto3";
package Msg;
option  go_package="ProtoEngine/src/message";
import "Msg_Enum.proto";
import "google/protobuf/descriptor.proto";

extend  google.protobuf.MessageOptions
{
  ServerMsg_ID serverMsgID=2010;
}
//返回错误消息
message NetError
{
  option (serverMsgID)=Msg_Error;
  EMsg_Error ErrorCode=1;
}
message LoginResquest
{
  option (serverMsgID)=Msg_LoginRequest;
  string username=1;
  string password=2;
}

message LoginResponse
{
  option (serverMsgID)=Msg_LoginResponse;
  int32 Userid=1;
  string Token=2;
}
